tests/lean/435.lean.expected.out
435.lean:3:37-3:42: warning: declaration uses 'sorry'
435.lean:5:21-5:23: error: unknown identifier 'op'
435.lean:5:0-5:23: error: cannot evaluate code because it uses 'sorry' and/or contains errors
